Added: handler adder button

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@ body {
 }
 
 
-
-/* @media (prefers-color-scheme: light) {
+/* :root {
+  color: #ffffff;
+  background-color:  #000000;
+}
+@media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
